...
                android:background="@color/black_transparent_60"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/tweet_list_user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/twitter_app_margin_default"
                    android:layout_weight="1"
                    android:lines="1"
                    android:singleLine="true"
...
